# boozle

./: Cargo.toml  LICENSE  readme.markdown
boozle/: Cargo.toml
boozle-actor/: Cargo.toml
boozle-actor/src/: actor.rs  lib.rs
boozle-gen/: Cargo.toml
boozle-gen-rust/: Cargo.toml
boozle-gen-rust/src/: lib.rs
boozle-gen/src/: lib.rs
boozle-identity/: Cargo.toml
boozle-identity/src/: lib.rs
boozle-ir/: Cargo.toml
boozle-ir/src/: lib.rs  value.rs
boozle-parser/: Cargo.toml
boozle-parser/src/: ast.rs  boozle.lalrpop  lib.rs
boozle-pool/: Cargo.toml
boozle-pool/src/: lib.rs
boozle-verifier/: Cargo.toml
boozle/src/: call.rs  channel.rs  connection.rs  dispatcher.rs  lib.rs  link.rs  message.rs  multiplexer.rs  netref.rs  object.rs  pool.rs  protocol.rs  transport.rs  value.rs
boozle/src/connection/: remote.rs  req.rs  res.rs
boozle/src/protocol/: req.rs  res.rs
boozle/src/transport/: tcp.rs
boozle_derive/: Cargo.toml
boozle_derive/src/: lib.rs
boozle_test/: Cargo.toml  test.boozle
boozle_test/src/: main.rs
