[package]
name = "boozle-parser"
version = "0.1.0"
authors = ["beta <bmcdorman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
lalrpop-util = "0.19.0"
regex = "1"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = {version = "0.19.0", features = ["lexer"]}