[package]
name = "boozle"
version = "0.1.0"
authors = ["beta <bmcdorman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
actix = "0.10.0-alpha.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
pin-project = "0.4"
bytes = "0.5.6"
bincode = "1.3.1"
bus = "2.2.3"
crossbeam = "0.7.3"

# serde_json is just for the example, not required in general
serde_json = "1.0"
futures = "0.3.5"
async-trait = "0.1.40"
snap = "1"